k8s/09-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: makeascene
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik

  rules:
    - host: api.makeascene.social
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000

  tls:
    - hosts:
        - api.makeascene.social
      secretName: backend-tls

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress-metrics-block
  namespace: makeascene
  annotations:
    traefik.ingress.kubernetes.io/router.priority: "100"
spec:
  ingressClassName: traefik

  rules:
    - host: api.makeascene.social
      http:
        paths:
          - path: /metrics
            pathType: Exact
            backend:
              service:
                name: metrics-deny
                port:
                  number: 80

  tls:
    - hosts:
        - api.makeascene.social
      secretName: backend-tls
